# C

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
.cache/clangd/index/: main.c.9D0F47B977051BBB.idx  mymath.c.526BB84CDEAE94AB.idx  mymath.h.126C88CEDC013AA6.idx
Tutorials/Day 1/: main.c
Tutorials/Day_1/: hello.c  hello.h  main.c
lib/: CMakeLists.txt  hello.c  hello.h
lib/math/: math.c  math.h  mymath.c  mymath.h
src/: main.c
